<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoUsers"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/userList"
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:layout_gravity="top" >
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal|center_vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Broadcast"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <EditText
            android:id="@+id/serverAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.02"
            android:ems="10"
            android:text="@string/DefaultIP"
            android:hint="@string/DefaultIP" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fetchLocationSourcesManually"
            android:text="@string/Fetch" />
    </LinearLayout>

</LinearLayout>